<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:theme="@style/Theme.Spotify">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                android:textColor="?attr/colorSecondary"
                android:textSize="@dimen/text_title_small"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/name"
                android:textColor="?attr/colorSecondary"
                android:textSize="@dimen/text_title_large"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_large"
                android:background="?attr/colorSecondary"
                android:hint="@string/hint_name"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="@dimen/margin_medium"
                android:textColor="?attr/colorPrimary"
                android:textColorHint="?attr/colorSecondaryVariant"
                android:textCursorDrawable="@drawable/shape_cursor_secondary"
                android:textSize="@dimen/text_title_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_name" />

            <TextView
                android:id="@+id/text_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/email"
                android:textColor="?attr/colorSecondary"
                android:textSize="@dimen/text_title_large"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/text_name"
                app:layout_constraintTop_toBottomOf="@id/edit_name" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_large"
                android:background="?attr/colorSecondary"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="@dimen/margin_medium"
                android:textColor="?attr/colorPrimary"
                android:textColorHint="?attr/colorSecondaryVariant"
                android:textCursorDrawable="@drawable/shape_cursor_secondary"
                android:textSize="@dimen/text_title_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_email" />

            <TextView
                android:id="@+id/text_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/password"
                android:textColor="?attr/colorSecondary"
                android:textSize="@dimen/text_title_large"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/text_name"
                app:layout_constraintTop_toBottomOf="@id/edit_email" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_large"
                android:background="?attr/colorSecondary"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="@dimen/margin_medium"
                android:textColor="?attr/colorPrimary"
                android:textColorHint="?attr/colorSecondaryVariant"
                android:textCursorDrawable="@drawable/shape_cursor_secondary"
                android:textSize="@dimen/text_title_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_password" />

            <TextView
                android:id="@+id/text_password_rule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/use_at_least_characters"
                android:textColor="?attr/colorSecondaryVariant"
                android:textSize="@dimen/text_body_large"
                app:layout_constraintStart_toStartOf="@id/edit_password"
                app:layout_constraintTop_toBottomOf="@id/edit_password" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_signup"
                style="@style/OutlinedTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/interval_large"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/text_title_small"
                app:backgroundTint="?attr/colorSecondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_password_rule" />

            <ProgressBar
                android:id="@+id/progressbar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="?attr/colorOnPrimary"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/btn_signup"
                app:layout_constraintEnd_toEndOf="@id/btn_signup"
                app:layout_constraintStart_toStartOf="@id/btn_signup"
                app:layout_constraintTop_toTopOf="@+id/btn_signup" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>